--- a/shop/locale/ru/LC_MESSAGES/django.po
+++ b/shop/locale/ru/LC_MESSAGES/django.po
@@ -9,15 +9,16 @@ msgstr ""
 "Project-Id-Version: django-shop\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-21 17:07+0200\n"
-"PO-Revision-Date: 2011-07-13 16:16+0000\n"
+"PO-Revision-Date: 2019-02-08 20:01+0200\n"
 "Last-Translator: chrisglass <tribaal@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language-Team: \n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 #: shop/templates/shop/admin/edit_inline/stacked-order.html:8
 msgid "Change"
@@ -415,7 +416,7 @@ msgstr "E-mail"
 
 #: shop/templates/shop/navbar/search-form.html:14
 msgid "Search"
-msgstr "Gjbcr"
+msgstr "Поиск"
 
 #: shop/templates/shop/navbar/search-form.html:16
 msgid "Refine your search"
