--- a/bombay/locale/uk/LC_MESSAGES/django.po
+++ b/bombay/locale/uk/LC_MESSAGES/django.po
@@ -3,21 +3,21 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-08 19:22+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2019-02-24 22:26+0200\n"
+"PO-Revision-Date: 2019-02-25 22:43+0200\n"
+"Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 #: lib/python3.7/site-packages/django/contrib/messages/apps.py:7
 msgid "Messages"
@@ -830,122 +830,122 @@ msgstr ""
 #: lib/python3.7/site-packages/django/utils/dates.py:31
 msgctxt "abbrev. month"
 msgid "Jan."
-msgstr ""
+msgstr "Січ."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:32
 msgctxt "abbrev. month"
 msgid "Feb."
-msgstr ""
+msgstr "Лют."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:33
 msgctxt "abbrev. month"
 msgid "March"
-msgstr ""
+msgstr "Бер."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:34
 msgctxt "abbrev. month"
 msgid "April"
-msgstr ""
+msgstr "Кві."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:35
 msgctxt "abbrev. month"
 msgid "May"
-msgstr ""
+msgstr "Тра."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:36
 msgctxt "abbrev. month"
 msgid "June"
-msgstr ""
+msgstr "Чер."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:37
 msgctxt "abbrev. month"
 msgid "July"
-msgstr ""
+msgstr "Лип."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:38
 msgctxt "abbrev. month"
 msgid "Aug."
-msgstr ""
+msgstr "Сер."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:39
 msgctxt "abbrev. month"
 msgid "Sept."
-msgstr ""
+msgstr "Вер."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:40
 msgctxt "abbrev. month"
 msgid "Oct."
-msgstr ""
+msgstr "Жов."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:41
 msgctxt "abbrev. month"
 msgid "Nov."
-msgstr ""
+msgstr "Лис."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:42
 msgctxt "abbrev. month"
 msgid "Dec."
-msgstr ""
+msgstr "Гру."
 
 #: lib/python3.7/site-packages/django/utils/dates.py:45
 msgctxt "alt. month"
 msgid "January"
-msgstr ""
+msgstr "Січень"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:46
 msgctxt "alt. month"
 msgid "February"
-msgstr ""
+msgstr "Лютий"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:47
 msgctxt "alt. month"
 msgid "March"
-msgstr ""
+msgstr "Берзень"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:48
 msgctxt "alt. month"
 msgid "April"
-msgstr ""
+msgstr "Квітень"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:49
 msgctxt "alt. month"
 msgid "May"
-msgstr ""
+msgstr "Травень"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:50
 msgctxt "alt. month"
 msgid "June"
-msgstr ""
+msgstr "Червень"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:51
 msgctxt "alt. month"
 msgid "July"
-msgstr ""
+msgstr "Липень"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:52
 msgctxt "alt. month"
 msgid "August"
-msgstr ""
+msgstr "Серпень"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:53
 msgctxt "alt. month"
 msgid "September"
-msgstr ""
+msgstr "Вересень"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:54
 msgctxt "alt. month"
 msgid "October"
-msgstr ""
+msgstr "Жовтень"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:55
 msgctxt "alt. month"
 msgid "November"
-msgstr ""
+msgstr "Листопад"
 
 #: lib/python3.7/site-packages/django/utils/dates.py:56
 msgctxt "alt. month"
 msgid "December"
-msgstr ""
+msgstr "Грудень"
 
 #: lib/python3.7/site-packages/django/utils/ipv6.py:12
 msgid "This is not a valid IPv6 address."
@@ -1209,4 +1209,4 @@ msgstr ""
 
 #: lib/python3.7/site-packages/menus/templates/menu/language_chooser.html:6
 msgid "Change to language:"
-msgstr ""
+msgstr "Змінити на мову:"
