--- a/contact_us/locale/ru/LC_MESSAGES/django.po
+++ b/contact_us/locale/ru/LC_MESSAGES/django.po
@@ -3,88 +3,90 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-02-12 21:14+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2019-02-24 23:03+0200\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
 "%100>=11 && n%100<=14)? 2 : 3);\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 #: forms.py:7
 msgid "Request more information"
-msgstr ""
+msgstr "Нужно больше информации"
 
 #: forms.py:8
 msgid "Learn more about how to contribute"
-msgstr ""
+msgstr "Предложение о сотрудничестве"
 
 #: forms.py:9
 msgid "Correction or bug report"
-msgstr ""
+msgstr "Сообщение об ошибке сайта"
 
 #: forms.py:10
 msgid "Other (please specify)"
-msgstr ""
+msgstr "Другое (пожалуйста, уточните)"
 
 #: models.py:6
 msgid "Visitor Name"
-msgstr ""
+msgstr "Имя посетителя"
 
 #: models.py:8
 msgid "Feedback Subject"
-msgstr ""
+msgstr "Тема сообщения"
 
 #: models.py:9 templates/contactus/contact_form.html:28
 msgid "Message"
-msgstr ""
+msgstr "Сообщение"
 
 #: models.py:14
 msgid "Feedback"
-msgstr ""
+msgstr "Отзыв"
 
 #: models.py:15
 msgid "Feedbacks"
-msgstr ""
+msgstr "Отзывы"
 
 #: templates/contactus/contact_form.html:7
 msgid "Your opinion is important for us."
-msgstr ""
+msgstr "Ваше мнение важно для нас."
 
 #: templates/contactus/contact_form.html:10
 msgid "Name"
-msgstr ""
+msgstr "Имя"
 
 #: templates/contactus/contact_form.html:16
 msgid "Email Address"
-msgstr ""
+msgstr "Ел. адресс"
 
 #: templates/contactus/contact_form.html:24
 msgid "Subject"
-msgstr ""
+msgstr "Тема"
 
 #: templates/contactus/contact_form.html:35
 #: templates/contactus/contact_success.html:13
 msgid "Close"
-msgstr ""
+msgstr "Закрыть"
 
 #: templates/contactus/contact_form.html:38
 msgid "Send Message"
-msgstr ""
+msgstr "Отправить сообщение"
 
 #: templates/contactus/contact_success.html:7
 msgid "Thank you for your opinion. If it is neccessary, we contact you soon."
 msgstr ""
+"Благодарим за Ваше мнение. При необходимости, мы свяжемся с Вами в "
+"кратчайшее время."
 
 #: views.py:17
 msgid "Contact Us Request"
-msgstr ""
+msgstr "Связатся с нами."
